# helm

./: .dockerignore  .gitignore  .replit  Dockerfile  README.md  calculum-platform.html  package-lock.json  package.json  render.yaml  replit.md  vite.config.ts
attached_assets/: Pasted--1-Fetch-and-display-table-or-grid-of-passports-Columns-Supplier-name-Coun-1763741928396_1763741928398.txt  Pasted--Build-a-sophisticated-Fintech-Dashboard-for-Helm-a-sup_1770510204866.txt  Pasted--DOCTYPE-html-html-lang-en-head-meta-charset-UTF-8-meta-name-viewport-con-1764273409786_1764273409787.txt  Pasted--Helm-Platform-Replit-Agent-Build-Prompt-You-are-extend_1778266700584.txt  Pasted--Prewave-monitors-a-comprehensive-array-of-over-140-supply-chain-risk-types-organized-into-va-1746223580245.txt  Pasted--To-enhance-SupplierIQ-s-positioning-and-capabilities-you-can-draw-valuable-insights-from-Dun-1746228261513.txt  (+9 more)
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: auth.py  config.py  db.py  main.py  models.py  schemas.py  seed.py
backend/app/routers/: ai.py  claims.py  expected_credits.py  programs.py  recon.py  suppliers.py
backend/app/services/: agreement_extractor.py  anthropic_client.py  calculator.py
backend/sample_docs/: BBB_Credit_Memo_3373974.csv  BBB_Distribution_Agreement_2024.csv  BBB_POS_Monthly_Q1_Q3_2024.csv  Crestline_Credit_Memo_4582193.csv  Crestline_Distribution_Agreement_2024.csv  Crestline_POS_Monthly_Q1_Q3_2024.csv  _generate_agreement_pdf.py  _generate_credit_memo_pdf.py
client/: index.html
client/src/: App.tsx  index.css
(+80 files in other folders)
