[project]
name = "helm-backend"
version = "0.1.0"
description = "Helm trade-intelligence platform — FastAPI backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "sqlalchemy>=2.0",
  "psycopg[binary]>=3.2",
  "alembic>=1.13",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "python-dotenv>=1.0",
]

[tool.uv]
package = false
